# IPK

./: .gitignore  workspace.code-workspace
Classes/: Car.cpp  Car.h  CarFactory.cpp  CarFactory.h  main.cpp
IPI6/: interestCalc.cpp
IPI7/: hoare.cpp
IPI9/: fcpp.hh  main.cpp
IPK10/: CMakeLists.txt  Filter.h  Frequencies.h  IFrequencies.h  frequencysource.h  main.cpp  sanitizeword.cpp  sanitizeword.h  test  test2  votieren.txt
IPK11/: Body.h  CMakeLists.txt  CMakeLists.txt.ol  Forces.h  Point.h  main.cpp  sdlwrapper.hh
IPK2/Collatz/: Collatz.cpp
IPK2/Fibonacci/: Fibonacci.cpp
IPK2/Nullstellen/: Nullstellen.cpp  Nullstellen.h  main.cpp
IPK3/: pow.cpp  pow.h  root.cpp  votieren.txt
IPK4/: ConvexHull.cpp  ConvexHull.h  main.cpp  outputHull.txt  vecs.h  vectorstuff.cpp  vectorstuff.cpp.save  votieren.txt
IPK5/: CMakeLists.txt  io.cpp  normal.cpp  readvector.cpp  statistics.cpp  statistics.h  testBatcher.sh  uniform.cpp
IPK6/: CMakeLists.txt  canvas.cpp  canvas.h  pgm.cpp  plot.cpp  point.cpp  point.h  poly.cpp  polygon.cpp  polygon.h  votieren.txt
IPK7/: CMakeLists.txt  io.h  point.h  pointMain.cpp  statistics.h  statisticsDriver.cpp  tests.cpp  votieren.txt
IPK8/: CMakeLists.txt  canvas.h  iterationResult.h  pgm.cpp  plot.cpp  votieren.txt
IPK9/: CMakeLists.txt  debug-1.cpp  debug-2.cpp  debug-3.cpp
